--- a/SemesterProject/app/src/main/res/layout/activity_math_neg_num_content_page.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_math_neg_num_content_page.xml
@@ -17,57 +17,58 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.558" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonNN2"
+        app:layout_constraintVertical_bias="0.1" />
 
     <Button
         android:id="@+id/buttonNN1"
-        android:layout_width="117dp"
-        android:layout_height="55dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:shadowColor="#FFFFFF"
         android:text="Start Quiz 1"
         android:textColor="#040303"
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.469"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.253" />
+        app:layout_constraintTop_toBottomOf="@+id/NNumTextView1"
+        app:layout_constraintVertical_bias="0.035" />
 
     <Button
         android:id="@+id/buttonNN2"
-        android:layout_width="140dp"
-        android:layout_height="55dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:shadowColor="#FFFFFF"
         android:text="Start Quiz 2"
         android:textColor="#040303"
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.519"
+        app:layout_constraintHorizontal_bias="0.468"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.465" />
+        app:layout_constraintTop_toBottomOf="@+id/NN2TextView"
+        app:layout_constraintVertical_bias="0.098" />
 
     <Button
         android:id="@+id/buttonNN3"
-        android:layout_width="153dp"
-        android:layout_height="58dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:shadowColor="#FFFFFF"
         android:text="Start Quiz 3"
         android:textColor="#040303"
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.66" />
+        app:layout_constraintTop_toBottomOf="@+id/NNumTextView3"
+        app:layout_constraintVertical_bias="0.135" />
 
     <TextView
         android:id="@+id/NNumTextView1"
-        android:layout_width="271dp"
-        android:layout_height="61dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Introduction to Negative Numbers"
         android:textAlignment="center"
         android:textColor="@android:color/white"
@@ -85,10 +86,10 @@
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintHorizontal_bias="0.469"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.361" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonNN1"
+        app:layout_constraintVertical_bias="0.078" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
