--- a/SemesterProject/app/src/main/res/layout/activity_math_arith_operation_content_page.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_math_arith_operation_content_page.xml
@@ -71,6 +71,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginEnd="64dp"
+        android:includeFontPadding="false"
+        android:paddingLeft="45dp"
+        android:paddingRight="45dp"
         android:text="Addition, Subtraction and Multiplcation  and Division of Decimal Numbers"
         android:textAlignment="center"
         android:textColor="@android:color/black"
