--- a/SemesterProject/app/src/main/res/layout/activity_ratio_content_page.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_ratio_content_page.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@android:color/white"
     tools:context=".RatioContentPage">
     <ScrollView
         android:layout_width="match_parent"
@@ -16,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
@@ -30,12 +31,12 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="246dp"
+                android:layout_height="260dp"
+                android:scaleType="fitStart"
                 android:src="@drawable/mathratio1" />
-
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="321dp"
+                android:layout_height="277dp"
                 android:src="@drawable/mathratio2" />
 
             <ImageView
@@ -55,6 +56,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="241dp"
                 android:src="@drawable/mathratio6" />
+
+
 
         </LinearLayout>
 
