--- a/SemesterProject/app/src/main/res/layout/activity_science__o_s2_content.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_science__o_s2_content.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/organs"
-    tools:context=".activity_science_OS2_content">
+    tools:context=".ScienceOS2Content">
 
     <Button
         android:id="@+id/btnQuizCirculatory"
