--- a/SemesterProject/app/src/main/res/layout/activity_science_matter_content.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_science_matter_content.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_science_matter_content"
+    tools:context=".ScienceMatterContent"
     android:background="@drawable/sciencematter">
 
 
