--- a/SemesterProject/app/src/main/res/layout-hdpi/activity_math_ratio_quiz1.xml
+++ b/SemesterProject/app/src/main/res/layout-hdpi/activity_math_ratio_quiz1.xml
@@ -156,24 +156,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="150dp"
-        app:layout_constraintGuide_percent="0.40" />
+        app:layout_constraintGuide_end="438dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp"
-        app:layout_constraintGuide_percent="0.45" />
+        app:layout_constraintGuide_end="402dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="533dp"
-        app:layout_constraintGuide_percent="0.80" />
+        app:layout_constraintGuide_end="146dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
