--- a/SemesterProject/app/src/main/res/layout/activity_science_matter_content.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_science_matter_content.xml
@@ -67,7 +67,7 @@
         app:layout_constraintVertical_bias="0.837" />
 
     <Button
-        android:id="@+id/c4e5d4"
+        android:id="@+id/btnQuizChanges1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
