--- a/SemesterProject/app/src/main/res/layout/activity_science_quiz_matter_states.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_science_quiz_matter_states.xml
@@ -9,10 +9,10 @@
 
 
     <Button
-        android:id="@+id/buttonCheck"
+        android:id="@+id/buttonCheck2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/radio_group"
+        android:layout_below="@id/radio_group2"
         android:freezesText="true"
         android:text="Confirm"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.389" />
 
     <RadioGroup
-        android:id="@+id/radio_group"
+        android:id="@+id/radio_group2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -34,7 +34,7 @@
         app:layout_constraintVertical_bias="0.176">
 
         <RadioButton
-            android:id="@+id/radio_button1"
+            android:id="@+id/radio_buttonA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:freezesText="true"
@@ -42,21 +42,21 @@
 
 
         <RadioButton
-            android:id="@+id/radio_button2"
+            android:id="@+id/radio_buttonB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:freezesText="true"
             android:text="Option 2" />
 
         <RadioButton
-            android:id="@+id/radio_button3"
+            android:id="@+id/radio_buttonC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:freezesText="true"
             android:text="Option 3" />
 
         <RadioButton
-            android:id="@+id/radio_button4"
+            android:id="@+id/radio_buttonD"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:freezesText="true"
@@ -66,7 +66,7 @@
     </RadioGroup>
 
     <TextView
-        android:id="@+id/text_view_countdown"
+        android:id="@+id/text_view_countdown2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -83,15 +83,15 @@
         app:layout_constraintVertical_bias="0.051" />
 
     <TextView
-        android:id="@+id/text_view_question1"
+        android:id="@+id/text_view_question2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/radio_group"
+        android:layout_above="@id/radio_group2"
         android:freezesText="true"
         android:text=""
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="15sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -100,7 +100,7 @@
         app:layout_constraintVertical_bias="0.042" />
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/textViewAns"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:freezesText="true"
@@ -114,7 +114,7 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <TextView
-        android:id="@+id/text_view_score"
+        android:id="@+id/text_view_score2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="196dp"
@@ -129,10 +129,10 @@
         app:layout_constraintVertical_bias="0.049" />
 
     <TextView
-        android:id="@+id/text_view_question_count"
+        android:id="@+id/text_view_question_count2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_score"
+        android:layout_below="@id/text_view_score2"
         android:layout_marginTop="20dp"
         android:freezesText="true"
         android:text="Question: 1/x"
@@ -141,7 +141,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.137"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_score"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_score2"
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.Guideline
