--- a/SemesterProject/app/src/main/res/layout-hdpi/activity_math_ratio_quiz1.xml
+++ b/SemesterProject/app/src/main/res/layout-hdpi/activity_math_ratio_quiz1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mathquiz"
+    android:background="@drawable/mathquiz1"
     tools:context=".MathRatioQuiz1">
 
 
@@ -187,6 +187,20 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.15"
         app:layout_constraintGuide_begin="20dp" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Music on"
+        android:textOff="Music off"
+        android:textOn="Music on"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.892"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        app:layout_constraintVertical_bias="0.728" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
