--- a/SemesterProject/app/src/main/res/layout/activity_math_neg_num_content_page.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_math_neg_num_content_page.xml
@@ -90,6 +90,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonNN1"
         app:layout_constraintVertical_bias="0.078" />
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Music on"
+        android:textOff="Music off"
+        android:textOn="Music on"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.905"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.917" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
