--- a/SemesterProject/app/src/main/res/layout/activity_science_quiz_matter_states.xml
+++ b/SemesterProject/app/src/main/res/layout/activity_science_quiz_matter_states.xml
@@ -91,7 +91,7 @@
         android:text=""
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -156,8 +156,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="150dp"
-        app:layout_constraintGuide_percent="0.40" />
+        app:layout_constraintGuide_end="438dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline3"
@@ -191,6 +190,19 @@
         app:layout_constraintGuide_percent="0.15"
         app:layout_constraintGuide_begin="20dp" />
 
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Music on"
+        android:textOff="Music off"
+        android:textOn="Music on"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.935"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        app:layout_constraintVertical_bias="0.722" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
