--- a/SemesterProject/app/src/main/res/values/colors.xml
+++ b/SemesterProject/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#5091b7</color>
+    <color name="colorPrimaryDark">#86e3ce</color>
+    <color name="colorAccent">#d0e6a5</color>
+    <color name="colorAccentLight">#ffdd94</color>
+    <color name="colorAccentDark">#fa897b</color>
 </resources>
